unpackaged/main/default/objects/CaseHistory__c/CaseHistory__c.object-meta.xml
<CustomObject>
    <label>Case Owner History</label>
    <nameField>
        <label>Case Owner History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Owner Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>