unpackaged/main/default/objects/CaseHistory__c/fields/ChangedOnWeekend__c.field-meta.xml
<CustomField>
    <fullName>ChangedOnWeekend__c</fullName>
    <description>flag</description>
    <formula>IF(WEEKDAY(DATEVALUE(TimestampoftheChange__c))=1,true, IF(WEEKDAY(DATEVALUE(TimestampoftheChange__c))=7,true, false))</formula>
    <inlineHelpText>if change happen on weekend.</inlineHelpText>
    <label>ChangedOnWeekend</label>
    <type>Checkbox</type>
</CustomField>