unpackaged/main/default/objects/CaseHistory__c/fields/Durationhours__c.field-meta.xml
<CustomField>
    <fullName>Durationhours__c</fullName>
    <formula>DurationMinutes__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>