unpackaged/main/default/objects/CaseHistory__c/fields/DurationMinutes__c.field-meta.xml
<CustomField>
    <fullName>DurationMinutes__c</fullName>
    <label>Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>