unpackaged/main/default/objects/CaseHistory__c/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <formula>NewUserOwner__r.Full_Name__c &amp; NewOwnerText__c</formula>
    <label>New Owner</label>
    <type>Text</type>
</CustomField>