unpackaged/main/default/objects/CaseHistory__c/fields/New_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>New_Owner_Role__c</fullName>
    <formula>NewUserOwner__r.UserRole.Name &amp; NewOwnerText__c</formula>
    <label>New Owner Role</label>
    <type>Text</type>
</CustomField>