unpackaged/main/default/objects/CaseHistory__c/fields/NewOutcomeSalesUse__c.field-meta.xml
<CustomField>
    <fullName>NewOutcomeSalesUse__c</fullName>
    <label>New OutcomeSalesUse</label>
    <length>80</length>
    <type>Text</type>
</CustomField>