unpackaged/main/default/objects/CaseHistory__c/fields/NewOwnerRole__c.field-meta.xml
<CustomField>
    <fullName>NewOwnerRole__c</fullName>
    <label>New Owner Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>