unpackaged/main/default/objects/CaseHistory__c/fields/NewOwnerText__c.field-meta.xml
<CustomField>
    <fullName>NewOwnerText__c</fullName>
    <label>New Owner Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>