unpackaged/main/default/objects/CaseHistory__c/fields/NewPSEOutcome__c.field-meta.xml
<CustomField>
    <fullName>NewPSEOutcome__c</fullName>
    <label>New PSEOutcome</label>
    <length>80</length>
    <type>Text</type>
</CustomField>