unpackaged/main/default/objects/CaseHistory__c/fields/NewSalesOpsOutcome__c.field-meta.xml
<CustomField>
    <fullName>NewSalesOpsOutcome__c</fullName>
    <label>New SalesOpsOutcome</label>
    <length>80</length>
    <type>Text</type>
</CustomField>