unpackaged/main/default/objects/CaseHistory__c/fields/NewUserOwner__c.field-meta.xml
<CustomField>
    <fullName>NewUserOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New User Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NewUserCasesHistory</relationshipName>
    <type>Lookup</type>
</CustomField>