unpackaged/main/default/objects/CaseHistory__c/fields/NumberOwnerOpenCases__c.field-meta.xml
<CustomField>
    <fullName>NumberOwnerOpenCases__c</fullName>
    <label>Number Owner Open Cases</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>