unpackaged/main/default/objects/CaseHistory__c/fields/Old_Owner__c.field-meta.xml
<CustomField>
    <fullName>Old_Owner__c</fullName>
    <formula>OldUserOwner__r.Full_Name__c &amp; OldOwnerText__c</formula>
    <label>Old Owner</label>
    <type>Text</type>
</CustomField>