unpackaged/main/default/objects/CaseHistory__c/fields/Old_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Old_Owner_Role__c</fullName>
    <formula>OldUserOwner__r.UserRole.Name &amp; OldOwnerText__c</formula>
    <label>Old Owner Role</label>
    <type>Text</type>
</CustomField>