unpackaged/main/default/objects/CaseHistory__c/fields/OldOutcomeSalesUse__c.field-meta.xml
<CustomField>
    <fullName>OldOutcomeSalesUse__c</fullName>
    <label>Old OutcomeSalesUse</label>
    <length>80</length>
    <type>Text</type>
</CustomField>