unpackaged/main/default/objects/CaseHistory__c/fields/OldOwnerRole__c.field-meta.xml
<CustomField>
    <fullName>OldOwnerRole__c</fullName>
    <label>Old Owner Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>