unpackaged/main/default/objects/CaseHistory__c/fields/OldOwnerText__c.field-meta.xml
<CustomField>
    <fullName>OldOwnerText__c</fullName>
    <label>Old Owner Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>