unpackaged/main/default/objects/CaseHistory__c/fields/OldPSEOutcome__c.field-meta.xml
<CustomField>
    <fullName>OldPSEOutcome__c</fullName>
    <label>Old PSEOutcome</label>
    <length>80</length>
    <type>Text</type>
</CustomField>