unpackaged/main/default/objects/CaseHistory__c/fields/OldSalesOpsOutcome__c.field-meta.xml
<CustomField>
    <fullName>OldSalesOpsOutcome__c</fullName>
    <label>Old SalesOpsOutcome</label>
    <length>80</length>
    <type>Text</type>
</CustomField>