unpackaged/main/default/objects/CaseHistory__c/fields/OldUserOwner__c.field-meta.xml
<CustomField>
    <fullName>OldUserOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old User Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_History</relationshipName>
    <type>Lookup</type>
</CustomField>