unpackaged/main/default/objects/CaseHistory__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Case Owner Histories</relationshipLabel>
    <relationshipName>Case_Owner_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>