unpackaged/main/default/objects/CaseHistory__c/fields/TimestampoftheChange__c.field-meta.xml
<CustomField>
    <fullName>TimestampoftheChange__c</fullName>
    <description>Timestamp when field changed.</description>
    <formula>DATETIMEVALUE(CreatedDate)</formula>
    <label>Timestamp of the Change</label>
    <type>DateTime</type>
</CustomField>